<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/team_a"
                android:textColor="#616161"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/initial_score"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:id="@+id/threePointsA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="24dp"
                android:onClick="threePointsA"
                android:text="@string/three_points" />

            <Button
                android:id="@+id/twoPointsA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="twoPointsA"
                android:text="@string/two_points" />

            <Button
                android:id="@+id/onePointA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="onePointA"
                android:text="@string/free_throw" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/team_b"
                android:textColor="#616161"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/initial_score"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:id="@+id/threePointsB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="24dp"
                android:onClick="threePointsB"
                android:text="@string/three_points" />

            <Button
                android:id="@+id/twoPointsB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="twoPointsB"
                android:text="@string/two_points" />

            <Button
                android:id="@+id/onePointB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="onePointB"
                android:text="@string/free_throw" />


        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="match_parent">-->
            <!--<View-->
                <!--android:layout_width="1dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@android:color/black">-->

            <!--</View>-->
        <!--</LinearLayout>-->


    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginBottom="32dp"
        android:onClick="reset"
        android:text="@string/reset_button" />
</RelativeLayout>
